# snake_spider_classifier

./: .gitignore  Makefile  README.md  environment.yml  flask_app.py  project_structure.txt  pyproject.toml  requirements.txt  structure.txt  structure_export.py
app/: __init__.py  routes.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html  index.html
models/: vgg16_se.py
notebooks/: snake-spider-classifier.ipynb
reports/: training_metrics.csv
snake_spider_classifier/: __init__.py  dataset.py  features.py  plots.py
snake_spider_classifier/configs/: exceptions.py  logger.py
snake_spider_classifier/modeling/: predict.py  train.py
