[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "snake_spider_classifier"
version = "0.0.1"
description = "Snake and spider image classifier"
authors = [
  { name = "Sanjay Bista" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["snake_spider_classifier"]
include = ["pyproject.toml", "snake_spider_classifier/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["snake_spider_classifier"]
force-sort-within-sections = true

